# agent-learning

./: .env.development  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: __init__.py
agents/deepseek/: __init__.py  agent.py  cli.py  client.py  demo.py
examples/: deepseek_chat.py  deepseek_cli.py  deepseek_client.py
logs/commits/: 2026-04-26_172903_57caa29.md
md-to-html/assets/styles/: business.css  dark.css  magazine.css
md-to-html/scripts/: convert.py
skills/: __init__.py
skills/md_to_html/: SKILL.md  __init__.py  skill.py
skills/md_to_html/assets/styles/: academic.css  elegant.css  minimal.css
skills/md_to_html/scripts/: convert.py
