[project]
name = "agent-learning"
version = "0.1.0"
description = "Agent 工程学习仓库"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.32.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
